<resources>
    <string name="app_name">weTrade</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account_sign_up">don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_optional">Phone (optional)</string>
    <string name="birthday_mm_dd_yyyy">Birthday (MM/DD/YYYY)</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">History</string>
    <string name="inventory">Inventory</string>
    <string name="profile">Profile</string>
    <string name="change_image">Change Image</string>
    <string name="item_name">Item Name:</string>
    <string name="item_description">Item Description:</string>
    <string name="item_condition">Item Condition:</string>
    <string name="item_price">Item Price:</string>
    <string name="dollar">$</string>
    <string name="category">Category:</string>
    <string name="item_category">Item category</string>
    <string name="quantity">Quantity:</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="item_img">item_img</string>
    <string name="create_a_new_product">create a new product</string>
    <string name="condition">Condition:</string>
    <string name="submit">Submit</string>
    <string name="product_image">product_image</string>
    <string name="place_your_order">Place Your Order</string>
    <string name="items">Items :</string>
    <string name="shipping_and_handling">Shipping and handling :</string>
    <string name="_0_00">$ 0.00</string>
    <string name="total_before_tax">Total before tax :</string>
    <string name="estimated_tax_to_be_collected">Estimated tax to be collected :</string>
    <string name="create_auction">CREATE AUCTION</string>
    <string name="auction_participants_pricelist">Auction Participants PriceList:</string>
    <string name="end_auction">End Auction</string>
    <string name="order_history">Order History:</string>
    <string name="sell_history">Sell History:</string>
    <string name="start_price">Start Price</string>
    <string name="updated_price">Highest Bid</string>
    <string name="your_bid_price">Your Bid Price:</string>
    <string name="enter_bid_price">Enter Bid Price: $</string>
    <string name="submit_price">Submit Price</string>
    <string name="auction_host">Auction Host:</string>
    <string name="sell">Sell</string>


    <string-array name="itemCondition">
        <item>New</item>
        <item>Used - Like New</item>
        <item>Used - Very Good</item>
        <item>Used - Good</item>
        <item>Used - Acceptable</item>
    </string-array>

    <string-array name="itemCategory">
        <item>Apps and Games</item>
        <item>Beauty and Personal Care</item>
        <item>Books</item>
        <item>Home and Kitchen Supplies</item>
        <item>Pet Supplies</item>
        <item>Office Products</item>
        <item>Clothing, Shoes and Jewelry</item>
        <item>Electronics</item>
    </string-array>

</resources>
