<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="35sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/email_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_address"
            android:textColor="#D3D3D3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_address_label"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_input"
            android:text="@string/password"
            android:textColor="#D3D3D3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_label"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/ButtonDefaultStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_input"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/forget_password_button"
            style="@style/ButtonTransparentStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_input"
            android:layout_alignParentEnd="true"
            android:stateListAnimator="@null"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/sign_up"
            style="@style/ButtonTransparentStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="5dp"
            android:stateListAnimator="@null"
            android:text="@string/don_t_have_an_account_sign_up" />

    </RelativeLayout>
</RelativeLayout>