<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:fontFamily="@font/lato_black"
        android:textSize="35sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/email_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_address"
            android:textColor="#D3D3D3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/email_address_label" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_input_register"
            android:textColor="#D3D3D3"
            android:text="@string/password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/password_label" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_input_register"
            style="@style/ButtonDefaultStyle"
            android:text="@string/register" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="5dp"
            android:text="@string/already_have_an_account_sign_in"
            style="@style/ButtonTransparentStyle"
            android:stateListAnimator="@null" />

    </RelativeLayout>





</RelativeLayout>