<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">
        <LinearLayout
            android:id="@+id/product_info_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/product_image"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/product_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/lato_bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/product_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/product_detail_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp" />

        </LinearLayout>
        <TextView
            android:id="@+id/item_quantity_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_info_linear_layout"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/quantity"/>

        <EditText
            android:id="@+id/item_quantity"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_quantity_label"
            android:layout_margin="10dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/item_condition_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_quantity"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/condition"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/item_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/item_condition_label"
            android:background="@drawable/dropdown_style" />

        <Button
            android:id="@+id/save_button"
            style="@style/ButtonDefaultBlueStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/item_condition"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/submit" />

    </RelativeLayout>

</ScrollView>