<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/item_display_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/item_detail_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/item_img"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/item_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/lato_bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_detail_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_semibold"
                android:text="Condition: "
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_detail_condition">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/condition_quantity_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/item_detail_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_detail_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/create_auction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonDefaultBlueStyle"
            android:layout_margin="10dp"
            android:onClick="createAuction"
            android:text="@string/create_auction"/>

        <Button
            android:id="@+id/delete_item"
            style="@style/ButtonDefaultRedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delete" />

    </LinearLayout>
</ScrollView>