<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        tools:context=".MainActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/camera" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:src="@drawable/ic_add"
            app:fabSize="mini"
            app:borderWidth="0dp"
            android:backgroundTint="#36B88B"
            android:layout_alignBottom="@+id/profile_image" />

        <Button
            android:id="@+id/upload_profile"
            style="@style/ButtonTransparentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profile_image"
            android:text="Save Profile Image" />

        <EditText
            android:id="@+id/user_firstname_input"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upload_profile"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/user_lastname_input"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_firstname_input"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/user_email_input"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_lastname_input"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/user_college_input"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_email_input"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="College" />

        <EditText
            android:id="@+id/user_expected_graduation_date_input"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_college_input"
            android:layout_margin="10dp"
            android:inputType="date"
            android:hint="Expected Graduaction Date (MM/YYYY)" />

        <EditText
            android:id="@+id/user_address1_input"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_expected_graduation_date_input"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="Address" />

        <LinearLayout
            android:id="@+id/city_state_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_address1_input"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_city_input"
                style="@style/EditTextBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:maxLines="1"
                android:inputType="text"
                android:hint="City" />

            <EditText
                android:id="@+id/user_state_input"
                style="@style/EditTextBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:inputType="text"
                android:hint="State" />

            <EditText
                android:id="@+id/user_zipcode_input"
                style="@style/EditTextBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:hint="Zipcode" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sex_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city_state_zip"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/male_selector"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="Male"
                android:textSize="16sp"
                android:textColor="#36B88B"/>

            <Switch
                android:id="@+id/sexSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:theme="@style/SwitchStyle"/>

            <TextView
                android:id="@+id/female_selector"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="Female"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/ButtonDefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/sex_selector"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Save" />

    </RelativeLayout>

</ScrollView>